Closed Bug 339120 Opened 20 years ago Closed 20 years ago

Jigzone Java puzzles hang trunk

Categories

(Core Graveyard :: Plug-ins, defect, P1)

x86
Windows XP

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: ria.klaassen, Assigned: darin.moz)

References

Details

(Keywords: regression)

Attachments

(1 file)

Steps to reproduce: 1. Go to http://www.jigzone.com/z.php?k=2F4GIDD8 and wait until Java has stopped loading 2. Then start loading the puzzle links under Recent Puzzles: Boat Rope Rose-P Shopping Carts Golden Stamen Herbie. One by one and wait after each puzzle until the processor has become fairly quiet again. 3. Result: Firefox hangs while loading "Shopping Carts" but Seamonkey can load one puzzle more. But they both finally hang. When I close the browser Java stays in the systray so I need to end the process in the task manager. This is a regression between 1.9a1_2006051010 and 1.9a1_2006051022. It is trunk-only. http://bonsai.mozilla.org/cvsquery.cgi?module=PhoenixTinderbox&date=explicit&mindate=2006-05-10+09%3A00&maxdate=2006-05-10+23%3A00 I think it could be caused by Bug 326273 but it is just a guess.
there is a new version available, but as you marked the regression time range I don't think it helps in this case. JRE 5.0 Update 7 http://java.sun.com/j2se/1.5.0/download.jsp http://javashoplm.sun.com/ECom/docs/Welcome.jsp?StoreId=22&PartDetailId=jre-1.5.0_07-oth-JPR&SiteId=JSC&TransactionId=noreg
Not sure what you mean but it is tested with the latest Java version ("You already have the latest Java(TM) Platform on this system").
Rechecked regression range which is correct.
What also might be relevant to say is that jigzone is a leaking site (Bug 324796), *but* there were never problems before 10 May 2006.
Summary: Java finally hangs trunk → Jigzone Java puzzles hang trunk
Flags: blocking1.9a1?
-> me
Severity: normal → major
Status: NEW → ASSIGNED
Priority: -- → P1
Target Milestone: --- → mozilla1.9alpha
Repeating the steps from comment #0, Firefox just locked up. Interesting...
Assignee: nobody → darin
Status: ASSIGNED → NEW
One possible change that could have impacted the Java plug-in behavior is the change to nsJVMManager::PostEvent with async = false. In that case, we now process pending events on the current thread while waiting for the event to be synchronously dispatched. It is possible that that is causing problems for the Java plug-in. It'd be easy enough to create a patch that better matches the old behavior of waiting on a condition variable until the event runs.
Status: NEW → ASSIGNED
Attached patch v1 patchSplinter Review
This seems to help a lot.
Attachment #224398 - Flags: superreview?(roc)
Attachment #224398 - Flags: review?(benjamin)
Attachment #224398 - Flags: superreview?(roc) → superreview+
Attachment #224398 - Flags: review?(benjamin) → review+
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Flags: blocking1.9a1?
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: