fixes bug 339120 "Jigzone Java puzzles hang trunk" r=bsmedberg sr=roc